# openai-deep-research-ui

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  db.py  docker-compose.yml  gunicorn.conf.py  odr-config.example.json  pyproject.toml  run.py  run_gaia.py  visual_vs_text_browser.ipynb  web_app.py
.github/workflows/: ci.yml  docker-publish.yml
docs/: README_es.md  README_fr.md  README_zh.md
scripts/: anthropic_model.py  compaction.py  cookies.py  gaia_scorer.py  mdconvert.py  model_routing.py  reformulator.py  run_agents.py  text_inspector_tool.py  text_web_browser.py  visual_qa.py
static/css/: main.css
static/js/: app.js  htm.js  state.js  utils.js
static/js/components/: AnswerBox.js  Collapsible.js  Header.js  HistoryPanel.js  InputPanel.js  OutputPanel.js  PlanStep.js  SettingsModal.js  Sidebar.js  StatusBar.js  StepContainer.js  SubAgent.js  ToolCall.js
templates/: index.html  login.html
