[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]

[tool.setuptools.package-data]
scripts = ["*.py"]

[project]
name = "open-deep-research"
version = "1.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "borui", email = "borui_cai@qq.com"},
]
license = {text = "Apache-2.0"}
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pathvalidate>=3.0.0",
    "requests>=2.28.0",
    "google-search-results>=2.4.0",
    "smolagents==1.24.0",
    "transformers>=4.30.0",
    "mammoth>=0.3.0",
    "markdownify>=0.11.0",
    "pandas>=1.5.0",
    "pdfminer.six>=20221105",
    "python-pptx>=0.6.0",
    "puremagic>=1.20",
    "pydub>=0.25.0",
    "beautifulsoup4>=4.11.0",
    "youtube-transcript-api>=0.6.0",
    "SpeechRecognition>=3.10.0",
    "ffmpeg>=1.4",
    "openai>=1.58.1",
    "anthropic>=0.40.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.0.0",
    "tavily-python>=0.5.0",
    "ddgs>=3.9.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.0.0",
    "tavily-python>=0.5.0",
]

[project.scripts]
open-deep-research = "run:main"
open-deep-research-gaia = "run_gaia:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "smolagents.*",
    "serpapi",
    "tavily",
    "datasets",
    "pandas",
    "tqdm",
    "flask_cors",
    "mcp.*",
]
ignore_missing_imports = true
follow_imports = "skip"
